Version: 20.0.21
Date: 2022-11-xxx
  Features:
    - This mod now integrates with the Biter Revive mod, so that a dead biter doesn't trigger both mods. Biter Revive takes priority, with a non revived biter be available to reincarnate.
    - Added mod setting to blacklist (exclude) named entity types from reincarnating.
    - Added mod setting to blacklist (exclude) entities on specific forces from reincarnating.
  Changes:
    - Don't exclude all units that don't have the `breaths-air` flag on them. Had no real impact for base game units and the new blacklist mod settings allow this to be covered if needed with mods, but in a much more flexible way.
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 20.0.20
Date: 2022-04-01
  Features:
  Changes:
  Bugfixes:
    - Removed work around introduced in previous mod version to mitigate core Factorio bug present only in 1.1.56.
  Info:
---------------------------------------------------------------------------------------------------
Version: 20.0.19
Date: 2022-03-12
  Features:
  Changes:
  Bugfixes:
    - Added work around for API bug introduced in Factorio 1.1.56. The work around fixes base game trees, but alien biomes and other modded trees will probably error and is untested. Utilising temporary hard coded values obtained in 1.1.54. https://forums.factorio.com/viewtopic.php?f=7&t=101833
  Info:
---------------------------------------------------------------------------------------------------
Version: 20.0.18
Date: 2022-03-04
  Features:
  Changes:
  Bugfixes:
    - Creating random trees on tiles without specific climate data no longer errors. If the player can walk on the tile they get a random tree, if they can't it gets no tree.
  Info:
---------------------------------------------------------------------------------------------------
Version: 20.0.17
Date: 2020-12-14
  Features:
  Changes:
  Bugfixes: