@@ -1,3 +1,13 @@
-Add demo video to mod readme.
-Add mod options to reincarnate worms. This should be a worm set of the mod settings that control chances. Set defaults to be 0 for all.
-If chance settings are all off for a type (unit/worm) then don't need to react to any events for that type.
+TODO
+----
+
+    - Add demo video to mod readme.
+
+
+
+
+FUTURE IDEAS
+------------
+
+    - Add mod options to reincarnate worms. This should be a worm set of the mod settings that control chances. Set defaults to be 0 for all.
+    - If chance settings are all off for a type (unit/worm) then don't need to react to any events for that type.
