@@ -85,7 +85,7 @@ data:extend(
             name = "biter_reincarnation-blacklisted_force_names",
             type = "string-setting",
             allow_blank = true,
-            default_value = "",
+            default_value = "player",
             setting_type = "runtime-global",
             order = "2001"
         }
